[project]
name = "pin3-slam"
version = "1.0"
description = "TEMPORARY RELEASE A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives"
readme = "README.md"
license= "BSD-3-Clause"
dependencies = ["hpp-fcl", "cmeel-urdfdom", "cmeel-console-bridge", "cmeel-tinyxml"]

[project.urls]
homepage = "https://github.com/stack-of-tasks/pinocchio"

[tool.cmeel]
configure-args = [
    "-DBUILD_WITH_COLLISION_SUPPORT=ON",
    "-DBUILD_WITH_LIBPYTHON=OFF",
    "-DSUFFIX_SO_VERSION=OFF",
    ]

[build-system]
build-backend = "cmeel.build"
requires = [
    "cmeel[build]",
    "cmeel-boost",
    "cmeel-console-bridge",
    "cmeel-eigen",
    "cmeel-tinyxml",
    "cmeel-urdfdom",
    "cmeel-urdfdom-headers",
    "hpp-fcl",
    ]
